Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19991

DevCpp 4.9.9.2 setup causes crash related to RICHED20.DLL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.16
    • Wine
    • None

    Description

      Using reactos-bootcd-0.4.16-dev-455-g37b0646-x86-gcc-lin-dbg

      Downloaded from link: https://sourceforge.net/projects/dev-cpp/files/Binaries/Dev-C%2B%2B%204.9.9.2/devcpp-4.9.9.2_nomingw_setup.exe/download

      How to ?

      1. Launch the exe
      2. It will display a messagebox, click ok
      3. It will display language selection box, click ok
      4. It will display license agreement, press enter
      5. It will crash.

      Log file: dbg_riched20_crash.log

      Stack trace (made with the help of log2lines): riched20_stacktrace.txt
      It seems the problem comes from the ME_KeyDown function, maybe because the editor is removed when you press a key because it passes you to a different page, but the key press is still handled ?

      Precision! The crash only occurs when pressing enter on the license agreement page!

      Another precision! If with your mouse you start pressing the accept button (cancel works too) then get your mouse out so it doesn't click, then press enter, the crash doesn't happen.

      Yet another precision! If you do what you did in the above precision then select text again with your mouse in the text frame, and press enter, the crash will occur. This all seem like a problem with focus and enter being handled by riched when it shouldn't (but this is my personal supposition) riched20.dll seems to be the problem.

      Attachments

        1. dbg_riched20_crash.log
          39 kB
          valorae_limae
        2. riched20_stacktrace.txt
          1 kB
          valorae_limae
        3. txthost-devcpp-fix.patch
          0.7 kB
          DougLyons
        4. VirtualBox_ReactOS_12_02_2025_11_55_58.png
          48 kB
          valorae_limae

        Issue Links

          Activity

            People

              DougLyons DougLyons
              hexahello valorae_limae
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: