[RICHED20] Fix DevCpp Ver 4.9.9.2 crash in riched20's txthost.c CORE-19991